force-app/src/objects/ffps_custRem__Reminder_Group__c.object
<CustomObject>
    <fields>
        <fullName>ffps_custRem__Batch_Job_Id__c</fullName>
        <label>Batch Job Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Reminder Groups</relationshipLabel>
        <relationshipName>Reminder_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Reminder Group</label>
    <listViews>
        <fullName>ffps_custRem__All</fullName>
        <columns>NAME</columns>
        <columns>ffps_custRem__Company__c</columns>
        <columns>ffps_custRem__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RG{0000000000}</displayFormat>
        <label>Reminder Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>